--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,12 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    // for shad cn init
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
